--- a/tugas3/commission.html
+++ b/tugas3/commission.html
@@ -56,6 +56,10 @@
                         <label>Name :</label>
                         <input type="text">
                     </div>
+                    <div class="teks-2">
+                        <label>Your Social Media :</label>
+                        <input type="text" placeholder="@your_add the_app">
+                    </div>
                     <div>
                         <label>What Type of Commission :</label>
                         <div>
