Correcting an Error

--- a/tugas3/contact.html
+++ b/tugas3/contact.html
@@ -166,6 +166,9 @@
             </div>
         </aside>
     </section>
+    <div class="bell">
+        <i class="bi bi-bell-fill"><a href="#"></a></i>
+    </div>
     <footer>
         <div class="copyright">
             <h4>© 2025 Jasmine Puteri Azzahra</a></h4>
